environments/dev/kubecope/kubescope-chart/templates/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod
  name: pod
  namespace: openkubescope
spec:
  securityContext:
    runAsUser: 10001
    runAsGroup: 10001
    runAsNonRoot: true
  containers:
  - args:
    - nginx
    image: nginx:latest
    name: pod
    securityContext:
      runAsUser: 10001
      runAsGroup: 10001
      runAsNonRoot: true
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
