environments/dev/kubecope/kubescope-chart/templates/not-allow-latest-tag-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-tag-not-latest
spec:
  validationFailureAction: enforce
  background: true

  rules:
    - name: disallow-latest-tag
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Using the 'latest' image tag is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
